# amanuensis

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.tilt  README.md  Tiltfile  dockerrun.bash  pyproject.toml
amanuensis/: __init__.py  amanuensis-config.yaml  config-default.yaml  config.py  errors.py  local_settings.example.py  models.py  schema.py  settings.py  utils.py
amanuensis/auth/: auth.py
amanuensis/blueprints/: admin.py  download_urls.py  filterset.py  inject_notifications.py  message.py  misc.py  notification.py  project.py  project_datapoints.py  retrieve_notifications.py
amanuensis/resources/admin/: admin_state.py
amanuensis/resources/associated_user/: __init__.py
amanuensis/resources/aws/: boto_manager.py
amanuensis/resources/consortium_data_contributor/: __init__.py
amanuensis/resources/fence/: __init__.py
amanuensis/resources/filter_sets/: __init__.py
amanuensis/resources/institution/: __init__.py
amanuensis/resources/message/: __init__.py
amanuensis/resources/notification/: __init__.py
amanuensis/resources/project/: __init__.py
amanuensis/resources/request/: __init__.py
amanuensis/resources/sower/: __init__.py
amanuensis/resources/userdatamodel/: __init__.py  associated_user_roles.py  associated_users.py  consortium_data_contributor.py  message.py  notification.py  notification_log.py  project.py  project_datapoints.py  project_has_associated_user.py  project_has_search.py  receivers.py  request.py  request_has_state.py  search.py  search_is_shared.py  state.py  transition.py  userdatamodel_message.py  userdatamodel_notification.py  (+2 more)
amanuensis/scripting/: clear_old_filter_sets.py  fence_create.py  validate_filter_sets.py
amanuensis/utils/: __init__.py  pagination.py
deployment/uwsgi/: wsgi.py
deployment/wsgi/: gunicorn.conf.py
migrations/: env.py
migrations/versions/: 03ceab80c865_initial_revision.py  40b00996555e_update_project_has_associated_user.py  57bc0c5a9733_require_value_for_role.py  57ef835d5488_add_and_track_user_notifications.py  b506b97bbfce_migrate_all_searches_after_dd_mol_.py  b5a7ca32c5b1_change_column_values_when_creating_.py  bfd4b47dd236_add_is_valid_flag_to_search_table.py  c6059263d6b9_convert_json_null_to_empty_objects.py  ec9c951d51ca_adding_datapoints_table.py  fca96219902c_update_filters_from_old_version.py
test_resources/: conftest.py
tests/: conftest.py  test_1_clear_unused_filter_sets.py  test_2_check_validate_filter_sets.py  test_associated_user_roles.py  test_associated_users.py  test_blueprint_admin.py  test_build_project.py  test_consortium_data_contributor.py  test_fence.py  test_message.py  test_notification_log.py  test_notifications.py  test_overall_project_status.py  test_project.py  test_project_blueprint_endpoints.py  test_project_datapoints.py  test_project_has_associated_user.py  test_project_pagination.py  test_receiver.py  test_request.py  test_request_has_state.py  test_search.py  test_state.py  test_update_filters_from_old_version.py
tests/project/: test_project_status.py
tests/tests_blueprint_admin/: conftest.py  test_add_associated_user.py  test_copy_search_to_project.py  test_copy_search_to_user.py  test_download_url.py  test_export_project.py  test_get_approved_url.py  test_get_project_filter-sets.py  test_get_project_state_history.py  test_get_states.py  test_remove_associated_user_from_project.py  test_update_associated_user_role.py  test_update_project.py  test_update_project_state.py  test_upload_file.py
tests/tests_resources_message/: test_send_email.py
tests_endpoints/endpoints/: test_get_presigned_url.py
(+7 files in other folders)
