[tool.poetry]
name = "amanuensis"
version = "3.1.0"
description = "Gen3 Portal related data"
authors = ["PCDC UChicago <lgraglia@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chicagopcdc/amanuensis"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
alembic = "^1.13.3"
authutils = "^6.2.5" # authutils = {git = "https://github.com/chicagopcdc/authutils.git", rev = "6.1.4"}  
boto3 = "1.35.50"
cdiserrors = "1.0.0"
cdislogging = "^1.1.1"
flask = ">=2.3.3"
flask-cors = "5.0.0"
gen3authz = "2.2.0"
gen3config = ">=1.1.0"

# this markupsafe pin is due to an error somewhere between Python 3.9.6 and 3.9.16
markupsafe = "^2.0.1"

requests = ">=2.32.3"
sqlalchemy = ">=2.0.36"
werkzeug = "3.0.6"

html2text = "^2020.1.16"

# Testing a fix to pcdcutils
pcdcutils = {git = "https://github.com/chicagopcdc/pcdcutils.git", rev = "0.5.1"}
pcdc-aws-client = {git = "https://github.com/chicagopcdc/pcdc-aws-client.git", rev = "1.3.3"}
userportaldatamodel = {git = "https://github.com/chicagopcdc/userPortalDataModel.git", rev = "1.10.0"}
psycopg2 = "<3"


hubspot-api-client = "^10.0.0"
gunicorn = ">=22.0.0"

[tool.poetry.group.dev.dependencies]
addict = "^2.2.1"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test", rev = "1.0.0"}
codacy-coverage = "^1.3.11" 
coveralls = "^2.1.1"
mock = "^2.0.0"
moto = "^1.1.24"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-order = "^1.0"

[tool.poetry.scripts]
fence-create = 'amanuensis.scripting.fence_create:main'
clear-old-filter-sets = 'amanuensis.scripting.clear_old_filter_sets:main'
validate-filter-sets = 'amanuensis.scripting.validate_filter_sets:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
